[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scenes/Biker.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/Menu.gd" type="Script" id=2]
[ext_resource path="res://Sounds/ReloadKRL-certp.wav" type="AudioStream" id=3]
[ext_resource path="res://Sounds/ES_The Glitch Train - Autohacker.wav" type="AudioStream" id=4]

[sub_resource type="Environment" id=1]
background_mode = 4
glow_enabled = true
glow_intensity = 0.4
glow_bloom = 0.75
glow_blend_mode = 0
glow_bicubic_upscale = true

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 98.5, 329.75 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 83.5, 654.375 )

[node name="Hotline" type="Control"]
focus_mode = 2
mouse_default_cursor_shape = 3
script = ExtResource( 2 )

[node name="Enemy-Spawn" type="Timer" parent="."]
wait_time = 1.5
autostart = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0

[node name="Area2D" type="Area2D" parent="." groups=["barreira"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -98.5, 318.5 )
shape = SubResource( 2 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 645, 734 )
rotation = 1.5708
shape = SubResource( 3 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 1373, 328.25 )
shape = SubResource( 2 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 653.625, -83.5 )
rotation = 1.5708
shape = SubResource( 3 )

[node name="Biker" parent="." instance=ExtResource( 1 )]
position = Vector2( 517, 244 )

[node name="Label" type="Label" parent="."]
margin_left = 591.0
margin_top = 8.0
margin_right = 667.0
margin_bottom = 22.0
rect_scale = Vector2( 2, 2 )

[node name="Sprite0" type="Sprite" parent="."]
position = Vector2( 40, 38 )

[node name="Sprite1" type="Sprite" parent="."]
position = Vector2( 65, 38 )

[node name="Sprite2" type="Sprite" parent="."]
position = Vector2( 90, 38 )

[node name="Sprite3" type="Sprite" parent="."]
position = Vector2( 115, 38 )

[node name="Sprite4" type="Sprite" parent="."]
position = Vector2( 140, 38 )

[node name="Sprite5" type="Sprite" parent="."]
position = Vector2( 165, 38 )

[node name="Sprite6" type="Sprite" parent="."]
position = Vector2( 190, 38 )

[node name="Sprite7" type="Sprite" parent="."]
position = Vector2( 215, 38 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )

[node name="recarregarkrl" type="Timer" parent="AudioStreamPlayer2D"]
wait_time = 3.18
one_shot = true

[node name="Synthwave" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )

[connection signal="timeout" from="Enemy-Spawn" to="." method="_on_EnemySpawn_timeout"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="timeout" from="AudioStreamPlayer2D/recarregarkrl" to="." method="_on_recarregarkrl_timeout"]
